--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,18 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+
 *.war
 *.ear
 
+# backup temp files #
+*.bak
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin
+/.classpath
+/.project
+/target
+/.settings
