--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,5 @@ addons:
     notification_email: sysdevone@gmail.com
     build_command_prepend: "mvn clean"
     build_command:   "mvn -DskipTests=true compile"
-    branch_pattern: coverity_scan
+    branch_pattern: master
+    #branch_pattern: coverity_scan
