--- a/pom.xml
+++ b/pom.xml
@@ -1,63 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.gabsocial.gabcmdline</groupId>
+	<groupId>com.gabstudios</groupId>
 	<artifactId>gab-cmdline</artifactId>
-	<version>0.4.alpha</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>GAB Social Command Line Argument Parser</name>
-	<description>The GAB Social Command Line Parser</description>
-	<url>https://github.com/sysdevone/gab-cmdline</url>
-
-	<properties>
-		<github.global.server>github</github.global.server>
-	</properties>
-
-	<developers>
-		<developer>
-			<id>sysdevone</id>
-			<name>Gregory Brown</name>
-			<timezone>-8</timezone>
-		</developer>
-	</developers>
+	<name>GAB Studios Command Line Argument Parser</name>
+	<description>The GAB Studios Command Line Parser</description>
+	<url>https://github.com/gab-studios/gab-cmdline</url>
 
 	<licenses>
 		<license>
 			<name>Apache v2.0</name>
-			<url>https://github.com/sysdevone/gab-clap/blob/master/LICENSE.txt</url>
+			<url>https://github.com/gab-gabstudios/gab-cmdline/blob/master/LICENSE.txt</url>
 		</license>
 	</licenses>
 
+	<developers>
+		<developer>
+			<name>Gregory Brown</name>
+			<email>gab@gabstudios.com</email>
+			<organization>GAB Studios</organization>
+			<organizationUrl>http://www.gabstudios.com</organizationUrl>
+		</developer>
+	</developers>
+
 	<scm>
-		<connection>scm:http://github.com/sysdevone/gab-cmdline.git</connection>
-		<developerConnection>scm:http://github.com/sysdevone/gab-cmdline.git</developerConnection>
-		<url>http://github.com/sysdevone/gab-cmdline.git</url>
+		<connection>scm:http://github.com/gab-gabstudios/gab-cmdline.git</connection>
+		<developerConnection>scm:http://github.com/gab-gabstudios/gab-cmdline.git</developerConnection>
+		<url>http://github.com/gab-gabstudios/gab-cmdline.git</url>
+		<tag>v1.0.0</tag>
 	</scm>
 
-	<dependencies>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+		</repository>
+	</distributionManagement>
 
+	<properties>
+		<github.global.server>github</github.global.server>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.build.timestamp.format>yyyyMMddhhmm</maven.build.timestamp.format>
+	</properties>
+
+	<dependencies>
 		<dependency>
-			<groupId>org.gabsocial</groupId>
+			<groupId>com.gabstudios</groupId>
 			<artifactId>gab-validate</artifactId>
-			<version>0.4.beta</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/gab-validate-0.4.beta.jar</systemPath>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.gabsocial</groupId>
+			<groupId>com.gabstudios</groupId>
 			<artifactId>gab-logging</artifactId>
-			<version>0.2.beta</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/gab-logging-0.2.beta.jar</systemPath>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.gabsocial</groupId>
+			<groupId>com.gabstudios</groupId>
 			<artifactId>gab-collection</artifactId>
-			<version>0.3.alpha</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/gab-collection-0.3.alpha.jar</systemPath>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -65,24 +74,27 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.10</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
 	</dependencies>
+
 	<build>
+		<!-- To define the plugin version in your parent POM -->
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-repository-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<!-- To use the plugin goals in your POM or parent POM -->
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-repository-plugin</artifactId>
+				<version>2.4</version>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -91,7 +103,7 @@
 					<execution>
 						<id>attach-sources</id>
 						<goals>
-							<goal>jar</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -99,7 +111,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<version>2.10.4</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -110,48 +122,55 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.0</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
 				<executions>
 					<execution>
-						<id>failing-on-high</id>
-						<phase>compile</phase>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
 						<goals>
-							<goal>check</goal>
+							<goal>sign</goal>
 						</goals>
-						<configuration>
-							<threshold>Low</threshold>
-						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>2.19</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<systemProperties>
-						<property>
-							<name>java.util.logging.config.file</name>
-							<value>src/test/resources/logging.properties</value>
-						</property>
-					</systemProperties>
-				</configuration>
+				<version>2.21.0</version>
+			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>3.1.3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.5.201505241946</version>
+				<version>0.8.1</version>
 				<executions>
 					<execution>
+						<id>prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
@@ -165,6 +184,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
