--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>com.gabstudios</groupId>
 			<artifactId>gab-validate</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.gabstudios</groupId>
