--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<connection>scm:http://github.com/gab-gabstudios/gab-cmdline.git</connection>
 		<developerConnection>scm:http://github.com/gab-gabstudios/gab-cmdline.git</developerConnection>
 		<url>http://github.com/gab-gabstudios/gab-cmdline.git</url>
-		<tag>v1.0.0</tag>
+		<tag>v@{project.version}</tag>
 	</scm>
 
 	<distributionManagement>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>com.gabstudios</groupId>
 			<artifactId>gab-logging</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.gabstudios</groupId>
@@ -100,7 +100,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -113,7 +113,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>3.3.1</version>
 				<configuration>
 					<source>8</source>
 				</configuration>
